slight spacing fix

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ footer center nav ul li a:visited {
     background-color:lavender;
     margin:0px;
     font-size:1.3em;
+    margin-bottom:20px;
 }
 
 #main-center {
